# TUSC2-is-an-immunometabolic-checkpoint-controlling-NK-cell-and-CD8-T-cell-function-in-cancer

./: CITATION.cff  LICENSE  README.md  collect_supplementary.py  make_supplementary_xlsx.py  pyproject.toml  reproduce.py  requirements.txt
supplementary/: README.md  SupplData_S1_CD8_per_gene_DE.csv  SupplData_S2_CD8_effect_size_ladder.tsv  SupplData_S2_NK_effect_size_ladder.tsv  SupplData_S3_NK_GSEA.csv  SupplData_S4_CD8_curated_label_provenance.tsv  SupplTable_S1_data_code_availability.md
tests/cd8/: conftest.py  test_config.py  test_data.py  test_degs.py  test_gate.py  test_gsea.py  test_pipeline.py  test_pipeline_gsea.py
tests/nk/: conftest.py  test_config.py  test_data.py  test_degs.py  test_gate.py  test_gsea.py  test_package_imports.py  test_pipeline.py  test_pipeline_gsea.py
tests/publication/: conftest.py  panel_asserts.py  test_data.py  test_gsea_bar.py  test_ledger.py  test_pub_style.py  test_render.py  test_running_es.py  test_verify_singlecell.py  test_volcano.py
tusc2_deg/: paths.py
tusc2_deg/cd8/: config.py  data.py  degs.py  gsea.py  pipeline.py
tusc2_deg/gene_sets/: HALLMARK_E2F_TARGETS.MSigDB_Hallmark_2020.grp  HALLMARK_FATTY_ACID_METABOLISM.v2025.1.Hs.grp  HALLMARK_G2M_CHECKPOINT.MSigDB_Hallmark_2020.grp  HALLMARK_GLYCOLYSIS.v2025.1.Hs.grp  HALLMARK_MITOTIC_SPINDLE.MSigDB_Hallmark_2020.grp  HALLMARK_MYC_TARGETS_V1.MSigDB_Hallmark_2020.grp  HALLMARK_OXIDATIVE_PHOSPHORYLATION.v2025.1.Hs.grp  NK_TUSC2_NK_RECEPTORS.curated.grp  NK_TUSC2_STRESS_IEG.curated.grp
tusc2_deg/nk/: config.py  data.py  degs.py  gsea.py  pipeline.py
(+17 files in other folders)
